# funathon-project3

./: .gitignore  1-acquisition.qmd  2-model.qmd  3-inference.qmd  3-training.qmd  4-inference.qmd  5-statistics.qmd  _quarto.yaml  doc_projet.qmd  index.qmd  map-nuts.qmd  pyproject.toml
final_solution/: main.py
intermediate_solutions/solution_step2/data/: download.py  loading.py
intermediate_solutions/solution_step3/: main.py  utils.py
intermediate_solutions/solution_step4/: main.py
src/: download_region.py  train.py  utils.py
src/data/: dataset.py  download.py  filter.py  loading.py  normalization.py  transforms.py
src/models/: model.py  module.py
src/training/: lightning.py  metrics.py
