[project]
name = "funathon-project3"
version = "0.1.0"
description = "Satellite image segmentation with deep learning"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "albumentations>=2.0.8",
    "astrovision>=0.14.7",
    "cloudpickle>=3.1.1",
    "dash>=4.1.0",
    "dash-leaflet>=1.1.3",
    "folium>=0.20.0",
    "gdal==3.11.4",
    "geopandas>=1.1.3",
    "great-tables",
    "jaraco-collections>=5.2.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "oauthlib>=3.3.1",
    "pandas>=2.2.3",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pytorch-lightning>=2.5.1",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "requests-oauthlib>=2.0.0",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.1",
]

[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true
